maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: error: recursive value direction needs type
    val direction=1::direction
                     ^ShortestPathMaze:30: error: recursive value direction needs type
    val direction=0::direction
                     ^