maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  scribe()
  droite()
  //while (!estSurBiscuit())
}

def scribe() {
  var i=getMondeLargeur()
  var j=getMondeHauteur()
  var iciX=0
  var iciY=0
  
  for (x<- 0 to i-1){
    for(y<- 0 to j-1){
      if (aBiscuit(x,y)){
        iciX=x
        iciY=y
      }
    }
  }
  setIndication(iciX,iciY,0)
}

def testDirection(x:Int,y:Int){
  val direction=Nil
  if (aMurNord(x,y)==true){
    val direction=1::direction
  }else{
    val direction=0::direction
  }
}